# django-aux

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  testrunner.py
django_aux/: apps.py  columns.py  decorators.py  factory.py  filters.py  forms.py  middleware.py  models.py  urls.py  utils.py  views.py
django_aux/migrations/: 0001_initial.py
django_aux/static/: main.css
django_aux/static/js/: save_set_collapse_status.js  save_set_scroll_pos.js  show_hide_remove_btn.js
django_aux/templates/django_aux/: base.html  checkbox-table.html  dash-filter.html  delete.html  form-table.html  inline-formset.html  login.html  logout.html  standard-plotly.html  standard.html
django_aux/templatetags/: aux_tags.py  dje_tags.py
django_aux_geo/: apps.py  filters.py  models.py  tables.py
django_aux_geo/migrations/: 0001_initial.py  0002_address_coordinate_coordinate_unique_coord_and_more.py  0002_subdivision.py  0003_alter_subdivision_iso_code.py
django_aux_request/: apps.py  filters.py  tables.py  urls.py  views.py
django_aux_timeperiods/: apps.py  models.py  tests.py
django_aux_timeperiods/migrations/: 0001_initial.py  0002_alter_day_options_alter_month_options_and_more.py
djangster_extras/: columns.py
docs/source/: conf.py  django_aux.migrations.rst  django_aux.rst  django_aux.templatetags.rst  modules.rst
example/: .gitignore  django_init.py  manage.py  requirements.txt  z_adhoc.ipynb  z_imports.py
example/example/: settings.py  urls.py
example/main/: filters.py  forms.py  models.py  tables.py  urls.py  views.py
example/main/migrations/: 0001_initial.py  0002_alter_historicalperson_options_and_more.py  0002_person_salary_alter_person_middle_name.py  0002_taggeditem.py  0003_alter_historicalperson_options_and_more.py  0003_personadjective.py  0004_alter_historicalperson_options_and_more.py  0004_person_adjectives.py  0005_alter_sale_buyer.py  0005_organization_person_org.py  0006_organization_country_code_alter_organization_name.py  0007_historicalperson.py  0008_alter_historicalperson_options_and_more.py  0009_alter_historicalperson_options_and_more.py  0010_alter_historicalperson_options_and_more.py  0011_alter_sale_category.py  0012_alter_sale_buyer.py  0013_day_month_week_year_week_unique_week_month_year_and_more.py  0014_remove_month_year_delete_day_delete_month_and_more.py
example/main/static/main/: hello.js
example/main/templates/main/: base.html  home.html
example/static/example/: main.css
example/templates/: base.html  home.html
tests/: filters.py  forms.py  models.py  tables.py  test_daux.py  test_daux_geo.py  test_daux_timeperiods.py  test_settings.py  tests.py  urls.py  utils.py  views.py
