[build-system]
requires = ['setuptools>=60.0.0', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
packages = ['django_aux', 'django_aux_geo', 'django_aux_timeperiods']

[project]
name = "django-aux"
authors = [
    {name = "Jordan Hyatt", email = "jordan.t.hyatt@gmail.com"},
    {name = "Kevin Geidel", email = "kgeidel@gmail.com"},
]
version = "0.0.82"
requires-python = ">=3.8"
description = "Useful Mixins for Django Projects"
readme = "README.md"
license = { file = "LICENSE" }


classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0", 
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

dependencies = [
    "Django >= 3.0",  
    "django-tables2 >= 2.0",
    "django-filter >= 21.0",
    "pandas >= 1.0",
    "numpy >= 1.20",
    "django-bootstrap-datepicker-plus >= 3.0",
    "django-crispy-forms >= 1.14.0",
    "django-bootstrap4 >= 21.0",
    "django-pandas >= 0.6",
    "plotly >= 5.0",
    "factory_boy >= 3.2.1",
    "lxml >= 4.0.0",
]
