[metadata]
name = djangster-extras
version = 0.0.1
description = Useful Mixins for Django Projects
long_description = file: README.rst
url = https: // www.example.com/
author = Your Name
author_email = yourname@example.com
license = MIT  # Example license
classifiers =
    Environment:: Web Environment
    Framework:: Django
    Framework: : Django : : 4.0 
    Intended Audience:: Developers
    License: : OSI Approved : : BSD License
    Operating System:: OS Independent
    Programming Language:: Python
    Programming Language: : Python : : 3
    Programming Language:: Python : : 3 : : Only
    Programming Language: : Python : : 3.8
    Programming Language: : Python : : 3.9
    Topic: : Internet : : WWW/HTTP
    Topic:: Internet : : WWW/HTTP : : Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires = 
    Django >= 3.0  
    django-tables2 >= 2.0
    pandas >= 1.0
    numpy >= 1.20
