[metadata]
name = django-aux
version = 0.0.28
description = Useful Mixins for Django Projects
long_description = file: README.md
url = https://github.com/JordanHyatt
author = Jordan Hyatt
author_email = jordan.hyatt@auxiliasystems.com
license = MIT  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0 
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires = 
    Django >= 3.0  
    django-tables2 >= 2.0
    django-filter >= 21.0
    pandas >= 1.0
    numpy >= 1.20
    django-bootstrap-datepicker-plus >= 3.0
    django-crispy-forms >= 1.14.0
    django-bootstrap4 >= 21.0
    django-pandas >= 0.6
    plotly >= 5.0
